[gd_scene load_steps=2 format=2]

[ext_resource path="res://equipment/SlotsContainer.gd" type="Script" id=1]

[node name="SlotsContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1274.0
margin_bottom = 716.0

[node name="SlotsNumberContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1268.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBoxContainer/SlotsNumberContainer"]
margin_right = 115.0
margin_bottom = 22.0
text = "Number of slots:"

[node name="SlotsNumberSpin" type="SpinBox" parent="VBoxContainer/SlotsNumberContainer"]
margin_left = 119.0
margin_right = 195.0
margin_bottom = 22.0
max_value = 4.0
align = 2

[node name="SlotsContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1268.0
margin_bottom = 74.0
columns = 2

[node name="Slot1Option" type="OptionButton" parent="VBoxContainer/SlotsContainer"]
margin_right = 180.0
margin_bottom = 22.0
rect_min_size = Vector2( 180, 0 )

[node name="Slot2Option" type="OptionButton" parent="VBoxContainer/SlotsContainer"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 22.0
rect_min_size = Vector2( 180, 0 )

[node name="Slot3Option" type="OptionButton" parent="VBoxContainer/SlotsContainer"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 48.0
rect_min_size = Vector2( 180, 0 )

[node name="Slot4Option" type="OptionButton" parent="VBoxContainer/SlotsContainer"]
margin_left = 184.0
margin_top = 26.0
margin_right = 364.0
margin_bottom = 48.0
rect_min_size = Vector2( 180, 0 )

[node name="ExtraContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 76.0
margin_right = 1266.0
margin_bottom = 100.0

[node name="ExtraLabel" type="Label" parent="VBoxContainer/ExtraContainer"]
margin_top = 5.0
margin_right = 35.0
margin_bottom = 19.0
text = "Extra:"

[node name="ExtraSpin" type="SpinBox" parent="VBoxContainer/ExtraContainer"]
margin_left = 39.0
margin_right = 113.0
margin_bottom = 24.0
min_value = -1.0
allow_greater = true
align = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
modulate = Color( 0.0313726, 1, 0, 1 )
margin_top = 78.0
margin_right = 1268.0
margin_bottom = 100.0
text = "All correct."
